# nayuta_web

./: .gitignore  README.md
.github/workflows/: deploy.yml
audio_pipeline/: compute_playable_subset.py  encode_opus.sh  extract_keyset.py  r2_cors.json  subset_files.txt  upload_r2.sh  upload_subset_r2.sh
audio_pipeline/mi300x_accent/: .gitignore  README.md  generate_accent_qa_mi300x.py  pack_transfer.sh  requirements_qa.txt  run_accent_gen.sh  setup_instance.sh
corpus_curation/: build_corpus_demo.py  score_sequences_by_discourse.py  scores_top.json  scores_top_core.json
corpus_curation/seeds/: corpus_demo_ars_baecker.json  corpus_demo_ars_bias.json  corpus_demo_artforum_identity.json  corpus_demo_mousse_irigaray.json  corpus_demo_tate_nnn.json
frontend/: .gitignore  deploy.env.example  index.html  package.json
frontend/public/: discourse_lemma_ids_v3.json  lemma_surface.json
frontend/public/about/: index.html
frontend/scripts/: deploy_pages.sh  gen_lemma_dict.py
frontend/src/: env.d.ts  main.ts  style.css
frontend/src/audio/: engine.ts
frontend/src/geometry/: helix.ts  nebula.ts  residual_helix.ts  ribbon.ts
frontend/src/panels/: aspect.ts  log_queue.ts  mon_clock.ts  mon_entropy.ts  mon_mandala.ts  mon_opstream.ts  mon_placeholder.ts  mon_scanner.ts  mon_whisper.ts  screen_rain.ts
frontend/src/stream/: decode_worker.ts  dump_adapter.ts  types.ts
tap/: Cargo.toml
tap/scripts/: run_all.sh  run_session.sh
tap/src/: main.rs
