[package]
name = "namedrop_tap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "namedrop_tap"
path = "src/main.rs"

[dependencies]
zmq = "0.10"
rosc = "0.11"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
